# compressor

./: .gitignore  LICENSE  README.md  Vagrantfile  autogen-test-dec.bash  autogen-test.bash  automatedtest.js  compress.c  fpaq0.cpp  fpaq0.cpp.dupzip  meson.build  ninjaworkaround.sh  simpletestscript
corpora/: english.txt.zst  google.html  jscmix.txt  jscmix2.txt  nnndriftwood.mix  nnndriftwood.mix.zst  nv_voronoi.h  vim.small.c
corpora/test/: finn_uastar.mix  finnish-bank-utils.min.js  finnish-bank-utils.min.js.br  nnn.c.zst  sincos_drift.mix
corpora/train/: cmix.c  cmix.c.2
src/: compress.c  decompress.c  fpaq0  fpaq0.cpp  fpaq0.cpp.modified  main.c
src/impl/: compressor.c  compressorpredictor.c  decompressor.c  decompressorpredictor.c  model.c  util.c
src/impl/models/: generic.c  simple.c
src/include/packingtape/: compressor.h  compressorpredictor.h  decompressor.h  decompressorpredictor.h  model.h  modelenum.h  util.h
src/include/packingtape/models/: TEXT1.h  TEXT2.h  generic.h
src/models/: sigmoid.c  simple.c
test/: compressor.spec.c  compressorpredictor.spec.c  decompressorpredictor.spec.c  model.spec.c
